<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <packaging>jar</packaging>
    <groupId>org.jexpress</groupId>
    <artifactId>jExpressApp</artifactId>
    <version>1.0.0</version>
    <name>jExpress Demo Application ${project.version}</name>
    <url>https://github.com/SummerBootFramework/jExpressDemo-HelloSummer</url>

    <properties>
        <!-- common properties -->
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- common dependencies -->
        <maven-clean.version>3.5.0</maven-clean.version>
        <maven-compiler.version>3.15.0</maven-compiler.version>
        <maven-dependency.version>3.10.0</maven-dependency.version>
        <maven-jar.version>3.5.0</maven-jar.version>
        <maven-resources.version>3.5.0</maven-resources.version>
        <maven-surefire.version>3.5.5</maven-surefire.version>
        <maven-failsafe.version>3.5.5</maven-failsafe.version>
        <swagger-maven.version>2.2.48</swagger-maven.version>
        <jexpress.version>2.6.10</jexpress.version>
        <testng.version>7.12.0</testng.version>

        <!-- application properties and dependencies-->
        <main.class>${api.package}.app.Main</main.class>
        <api.package>org.jexpress.demoapp</api.package>
        <!-- protobuf and gRPC -->
        <protobuf.version>4.34.1</protobuf.version>
        <grpc.version>1.80.0</grpc.version>
        <jdbc.version>9.7.0</jdbc.version>

        <!-- PDF - iText -->
        <itext-core.version>9.6.0</itext-core.version>
        <itext-html2pdf.version>6.3.2</itext-html2pdf.version>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.summerboot/jexpress -->
        <dependency>
            <groupId>org.summerboot</groupId>
            <artifactId>jexpress</artifactId>
            <version>${jexpress.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${jdbc.version}</version>
        </dependency>

        <!-- PDF - iText -->
        <!-- https://mvnrepository.com/artifact/com.itextpdf/itext-core AGPL 3.0-->
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itext-core</artifactId>
            <version>${itext-core.version}</version>
            <type>pom</type>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.itextpdf/html2pdf AGPL 3.0-->
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>html2pdf</artifactId>
            <version>${itext-html2pdf.version}</version>
        </dependency>

        <!-- Testing -->
        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${artifactId}</finalName>
        <!-- gRPC -->
        <extensions>
            <!-- https://mvnrepository.com/artifact/kr.motd.maven/os-maven-plugin -->
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.1</version>
            </extension>
        </extensions>

        <plugins>
            <!-- gRPC: https://mvnrepository.com/artifact/org.xolstice.maven.plugins/protobuf-maven-plugin -->
            <plugin>
                <groupId>org.xolstice.maven.plugins</groupId>
                <artifactId>protobuf-maven-plugin</artifactId>
                <version>0.6.1</version>
                <configuration>
                    <!-- https://mvnrepository.com/artifact/com.google.protobuf/protoc -->
                    <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
                    </protocArtifact>
                    <pluginId>grpc-java</pluginId>
                    <!-- https://mvnrepository.com/artifact/io.grpc/protoc-gen-grpc-java -->
                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
                    </pluginArtifact>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>compile-custom</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- To generate openapi -->
            <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-maven-plugin-jakarta -->
            <plugin>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-maven-plugin-jakarta</artifactId>
                <version>${swagger-maven.version}</version>
                <configuration>
                    <outputPath>.</outputPath>
                    <outputFileName>openapi</outputFileName>
                    <!-- <configurationFilePath>${project.basedir}/src/main/resources/openapi.json</configurationFilePath> -->
                    <outputFormat>JSONANDYAML</outputFormat>
                    <resourcePackages>
                        <package>${api.package}</package>
                    </resourcePackages>
                    <prettyPrint>true</prettyPrint>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>resolve</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean.version}</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>.</directory>
                            <includes>
                                <include>gc.*</include>
                            </includes>
                            <excludes>
                                <exclude>plugin/*.jar</exclude>
                            </excludes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                        <fileset>
                            <directory>run</directory>
                            <includes>
                                <include>gc.*</include>
                                <include>*.jar</include>
                                <include>lib/**</include>
                                <include>lib</include>
                                <include>**/log/**</include>
                                <include>**/log</include>
                                <include>**/temp/**</include>
                                <include>**/temp</include>
                            </includes>
                            <excludes>
                                <exclude>plugin/*.jar</exclude>
                            </excludes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                        <fileset>
                            <directory>src/test</directory>
                            <includes>
                                <include>**/temp/**</include>
                                <include>**/temp</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                        <fileset>
                            <directory>.</directory>
                            <includes>
                                <include>etc/*</include>
                                <include>etc</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency.version}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/../run/lib</outputDirectory>
                            <outputDirectory>run/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <!-- To disable for local dependency -->
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar.version}</version>
                <configuration>
                    <outputDirectory>run</outputDirectory>
                    <archive>
                        <manifest>
                            <mainClass>${main.class}</mainClass>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <!-- To force the use of '-SNAPSHOT' version naming, simply disable the <useUniqueVersions>  -->
                            <useUniqueVersions>false</useUniqueVersions>
                        </manifest>
                        <!-- To enable for local dependency
                        <manifestEntries>
                            <Class-Path>lib/lib1-1.0.jar lib/lib2-1.0.jar</Class-Path>
                        </manifestEntries> -->
                        <manifestEntries>
                            <!-- Resolves your native access warning -->
                            <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>

            <!-- Unit Test Plugin -->
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire.version}</version>
                <configuration>
                    <argLine>-Djava.awt.headless=true -Xms2G -Xmx2G -XX:+UseZGC -XX:ZUncommitDelay=300
                        -XX:+ZGenerational -XX:+AlwaysPreTouch -XX:+PerfDisableSharedMem
                        -XX:+ZUncommit -XX:+DisableExplicitGC -XX:MaxDirectMemorySize=1g -XX:+HeapDumpOnOutOfMemoryError
                        -XX:HeapDumpPath=heapdump.hprof -XX:+ExitOnOutOfMemoryError
                        -Xlog:gc*:file=gc.log:time,level,tags:filecount=5,filesize=10M -Dfile.encoding=UTF-8
                        -Duser.timezone=America/Toronto
                        -Dio.netty.handler.ssl.openssl.engine.enable=true -Dio.netty.leakDetectionLevel=SIMPLE
                        -Dio.netty.native.workdir=lib
                        -Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector
                    </argLine>
                </configuration>
            </plugin>

            <!-- Integration Test Plugin -->
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe.version}</version>
                <configuration>
                    <argLine>-Djava.awt.headless=true -Xms2G -Xmx2G -XX:+UseZGC -XX:ZUncommitDelay=300
                        -XX:+ZGenerational -XX:+AlwaysPreTouch -XX:+PerfDisableSharedMem
                        -XX:+ZUncommit -XX:+DisableExplicitGC -XX:MaxDirectMemorySize=1g -XX:+HeapDumpOnOutOfMemoryError
                        -XX:HeapDumpPath=heapdump.hprof -XX:+ExitOnOutOfMemoryError
                        -Xlog:gc*:file=gc.log:time,level,tags:filecount=5,filesize=10M -Dfile.encoding=UTF-8
                        -Duser.timezone=America/Toronto
                        -Dio.netty.handler.ssl.openssl.engine.enable=true -Dio.netty.leakDetectionLevel=SIMPLE
                        -Dio.netty.native.workdir=lib
                        -Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
